[gd_scene load_steps=13 format=2]

[ext_resource path="res://r_Standard/Images/UI/play.png" type="Texture" id=1]
[ext_resource path="res://r_Standard/Images/UI/HOF_b.png" type="Texture" id=2]
[ext_resource path="res://r_Standard/Images/UI/quit.png" type="Texture" id=3]
[ext_resource path="res://r_Standard/Images/UI/WinBack.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=5]
[ext_resource path="res://r_Standard/Images/UI/controller.png" type="Texture" id=6]
[ext_resource path="res://Scenes/SnakeArena.tscn" type="PackedScene" id=7]
[ext_resource path="res://r_Standard/Images/UI/host.png" type="Texture" id=8]
[ext_resource path="res://r_Standard/Font/comic.ttf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -101.253
margin_top = -878.138
margin_right = 298.747
margin_bottom = 329.862
rect_scale = Vector2( 0.230434, 0.230434 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 400.0
texture_normal = ExtResource( 1 )

[node name="Host" type="TextureButton" parent="VBoxContainer"]
margin_top = 404.0
margin_right = 400.0
margin_bottom = 804.0
texture_normal = ExtResource( 8 )

[node name="HallOfFame" type="TextureButton" parent="VBoxContainer"]
margin_top = 808.0
margin_right = 400.0
margin_bottom = 1208.0
texture_normal = ExtResource( 2 )

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
margin_top = 1212.0
margin_right = 400.0
margin_bottom = 1612.0
texture_normal = ExtResource( 3 )

[node name="Controller" type="TextureButton" parent="VBoxContainer"]
margin_top = 1616.0
margin_right = 400.0
margin_bottom = 2016.0
texture_normal = ExtResource( 6 )

[node name="SnakeArena" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 498.366, 462.498 )
TilesX = 10.0
ScreenW = 480.0

[node name="IpAddr" type="LineEdit" parent="."]
margin_left = 1031.0
margin_top = 172.0
margin_right = 1515.0
margin_bottom = 256.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "192.168.987.721"
align = 2
max_length = 20
placeholder_text = "Ip-Address"
placeholder_alpha = 0.644
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="LineEdit" parent="."]
margin_left = 1561.0
margin_top = 172.0
margin_right = 1752.0
margin_bottom = 256.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "8080"
max_length = 20
placeholder_text = "Ip-Address"
placeholder_alpha = 0.644
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="VBoxContainer/HallOfFame" to="." method="_on_HallOfFame_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Controller" to="." method="_on_Controller_pressed"]
